- adding, editing, and removing works - better rotation support - archive crashes - project switching requires restart

--- a/app/src/main/res/layout/test_layout.xml
+++ b/app/src/main/res/layout/test_layout.xml
@@ -6,7 +6,7 @@
     android:visibility="visible">
 
     <com.andb.apps.todo.views.FolderButtonCardLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
