--- a/app/src/main/res/layout/folder_picker.xml
+++ b/app/src/main/res/layout/folder_picker.xml
@@ -11,7 +11,7 @@
     android:layout_marginEnd="8dp"
     android:animateLayoutChanges="true"
     android:focusableInTouchMode="true"
-    app:cardCornerRadius="8dp"
+    app:cardCornerRadius="24dp"
     app:cardElevation="8dp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
@@ -27,6 +27,7 @@
             android:id="@+id/folderTagRecycler"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/folderCardHeader" />
@@ -56,10 +57,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
                 android:layout_marginBottom="8dp"
                 android:text="@string/browse_tag_card_header_text"
                 android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Button"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/folderHeaderIcon"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -71,6 +75,7 @@
                 android:background="?android:attr/selectableItemBackgroundBorderless"
                 android:rotation="180"
                 android:src="@drawable/taglinkremove_selector"
+                android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -83,6 +88,7 @@
                 android:background="?android:attr/selectableItemBackgroundBorderless"
                 android:rotation="180"
                 android:src="@drawable/ic_add_black_24dp"
+                android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/folderCollapseButton"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -93,6 +99,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="?android:attr/listDivider"
+                android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
