--- a/app/src/main/res/layout/folder_picker.xml
+++ b/app/src/main/res/layout/folder_picker.xml
@@ -1,109 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/folderCardHolder"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="8dp"
-    android:layout_marginTop="16dp"
-    android:layout_marginEnd="8dp"
-    android:animateLayoutChanges="true"
-    android:focusableInTouchMode="true"
-    app:cardCornerRadius="24dp"
-    app:cardElevation="8dp"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent">
+    android:background="@android:color/transparent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/folderCardLayout"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/folderCardHolder"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/folderTagRecycler"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:visibility="visible"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/folderCardHeader" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|center_vertical"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
+        android:animateLayoutChanges="true"
+        app:cardCornerRadius="36dp"
+        app:cardElevation="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/folderCardHeader"
+            android:id="@+id/folderCardLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?android:attr/selectableItemBackground"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_height="wrap_content">
 
-            <com.andb.apps.todo.views.CyaneaIcon
-                android:id="@+id/folderHeaderIcon"
-                android:layout_width="wrap_content"
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/folderTagRecycler"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:alpha=".54"
-                android:padding="16dp"
-                android:src="@drawable/ic_folder_black_24dp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:visibility="visible"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <com.andb.apps.todo.views.CyaneaTextView
-                android:id="@+id/folderHeaderButtonText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="8dp"
-                android:text="@string/browse_tag_card_header_text"
-                android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Button"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/folderHeaderIcon"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <com.andb.apps.todo.views.CyaneaIcon
-                android:id="@+id/folderCollapseButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:background="?android:attr/selectableItemBackgroundBorderless"
-                android:rotation="180"
-                android:src="@drawable/taglinkremove_selector"
-                android:visibility="visible"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <com.andb.apps.todo.views.CyaneaIcon
-                android:id="@+id/folderAddButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:background="?android:attr/selectableItemBackgroundBorderless"
-                android:rotation="180"
-                android:src="@drawable/ic_add_black_24dp"
-                android:visibility="visible"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/folderCollapseButton"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@+id/folderCardHeader" />
 
 
-            <View
-                android:id="@+id/folderDivider"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/folderCardHeader"
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="?android:attr/listDivider"
-                android:visibility="visible"
-                app:layout_constraintBottom_toBottomOf="parent" />
+                android:layout_height="wrap_content"
+                android:background="?android:attr/selectableItemBackground"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <com.andb.apps.todo.views.CyaneaIcon
+                    android:id="@+id/folderHeaderIcon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp"
+                    android:src="@drawable/ic_folder_black_24dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <com.andb.apps.todo.views.CyaneaTextView
+                    android:id="@+id/folderHeaderButtonText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="32dp"
+                    android:layout_marginBottom="8dp"
+                    android:text="@string/browse_tag_card_header_text"
+                    android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Button"
+                    app:cyaneaTextBackground="accent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toEndOf="@+id/folderHeaderIcon"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <com.andb.apps.todo.views.CyaneaIcon
+                    android:id="@+id/folderCollapseButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
+                    android:background="?android:attr/selectableItemBackgroundBorderless"
+                    android:rotation="180"
+                    android:src="@drawable/taglinkremove_selector"
+                    android:visibility="visible"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <com.andb.apps.todo.views.CyaneaIcon
+                    android:id="@+id/folderAddButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
+                    android:background="?android:attr/selectableItemBackgroundBorderless"
+                    android:rotation="180"
+                    android:src="@drawable/ic_add_black_24dp"
+                    android:visibility="visible"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/folderCollapseButton"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+
+                <View
+                    android:id="@+id/folderDivider"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="?android:attr/listDivider"
+                    android:visibility="visible"
+                    app:layout_constraintBottom_toBottomOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 
-</androidx.cardview.widget.CardView>
-
+</FrameLayout>
