--- a/app/src/main/res/layout/inbox_header.xml
+++ b/app/src/main/res/layout/inbox_header.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:focusableInTouchMode="true">
+    android:focusableInTouchMode="true"
+    android:animateLayoutChanges="true">
 
     <com.andb.apps.todo.views.CyaneaTextView
         android:id="@+id/task_count_text"
@@ -29,25 +30,39 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/task_count_text" />
 
-
-    <Button
-        android:id="@+id/tag_button"
-        android:layout_width="wrap_content"
+    <com.andb.apps.todo.views.FolderButtonCardLayout
+        android:id="@+id/folderButton"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        android:layout_marginBottom="36dp"
-        android:background="@drawable/rounded_button_background"
-        android:backgroundTintMode="src_atop"
-        android:drawableLeft="@drawable/ic_label_black_24dp"
-        android:drawablePadding="12dp"
-        android:elevation="8dp"
-        android:paddingLeft="32dp"
-        android:paddingRight="32dp"
-        android:text="TAGS"
-        android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Button"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:background="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/task_path_text" />
+
+
+    <!--    <Button
+            android:id="@+id/tag_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="36dp"
+            android:layout_marginBottom="36dp"
+            android:background="@drawable/rounded_button_background"
+            android:backgroundTintMode="src_atop"
+            android:drawableLeft="@drawable/ic_label_black_24dp"
+            android:drawablePadding="12dp"
+            android:elevation="8dp"
+            android:paddingLeft="32dp"
+            android:paddingRight="32dp"
+            android:text="TAGS"
+            android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Button"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/task_path_text" />-->
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
