- renamed - Add and remove subtags

--- a/app/src/main/res/layout/folder_picker.xml
+++ b/app/src/main/res/layout/folder_picker.xml
@@ -77,8 +77,8 @@
                     android:id="@+id/folderEditButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
                     android:background="?android:attr/selectableItemBackgroundBorderless"
+                    android:padding="16dp"
                     android:src="@drawable/ic_edit_black_24dp"
                     android:visibility="visible"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -89,8 +89,8 @@
                     android:id="@+id/folderAddButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
                     android:background="?android:attr/selectableItemBackgroundBorderless"
+                    android:padding="16dp"
                     android:rotation="180"
                     android:src="@drawable/ic_add_black_24dp"
                     android:visibility="visible"
