--- a/app/src/main/res/layout/bottom_sheet_layout.xml
+++ b/app/src/main/res/layout/bottom_sheet_layout.xml
@@ -2,11 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:custom="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/bottom_sheet_layout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
->
+    android:layout_height="wrap_content">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/app_bar_coordinator"
@@ -24,7 +22,7 @@
             android:backgroundTint="@color/cyanea_primary"
             android:theme="@style/Base.Theme.MaterialComponents"
             app:fabAlignmentMode="center"
-            app:navigationIcon="@drawable/ic_bottom_drawer_toggle_24dp" />
+            app:navigationIcon="@drawable/anim_collapse_clear_selector" />
 
         <com.andb.apps.todo.views.CyaneaTextView
             android:id="@+id/toolbar_text"
@@ -60,7 +58,7 @@
             android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_add_black_24dp"
+            android:src="@drawable/anim_add_done_selector"
             app:backgroundTint="?colorAccent"
             app:fabSize="normal"
             app:layout_anchor="@+id/toolbar"
