--- a/app/src/main/res/layout/inbox_list_item.xml
+++ b/app/src/main/res/layout/inbox_list_item.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/inboxCard"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:animateLayoutChanges="true"
     android:elevation="0dp"
     android:theme="@style/AppThemeGlobal"
-    android:animateLayoutChanges="true"
     android:visibility="visible">
 
 
@@ -31,6 +33,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="4dp"
+        android:visibility="visible"
         app:layout_constraintEnd_toStartOf="@+id/moreTags"
         app:layout_constraintStart_toEndOf="@+id/sublistIcon"
         app:layout_constraintTop_toTopOf="parent" />
@@ -54,12 +57,12 @@
         android:layout_height="0dp"
         android:layout_marginTop="4dp"
         android:layout_marginBottom="4dp"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/list_divider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
 
     <androidx.appcompat.widget.AppCompatCheckBox
@@ -70,8 +73,7 @@
         android:paddingTop="12dp"
         android:paddingBottom="12dp"
         android:text="CheckBox"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/item2"
+        android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/topLayout" />
 
@@ -83,8 +85,7 @@
         android:paddingTop="12dp"
         android:paddingBottom="12dp"
         android:text="CheckBox"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/item3"
+        android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/item1" />
 
@@ -96,8 +97,7 @@
         android:paddingTop="12dp"
         android:paddingBottom="12dp"
         android:text="CheckBox"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/moreTasks"
+        android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/item2" />
 
@@ -109,7 +109,6 @@
         android:paddingTop="8dp"
         android:src="@drawable/ic_more_horiz_black_24dp"
         android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/listitempadding"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/item3" />
 
@@ -118,18 +117,18 @@
         android:layout_width="wrap_content"
         android:layout_height="12dp"
         android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/list_divider"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/moreTasks" />
 
-        <View
-            android:id="@+id/list_divider"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="?android:attr/listDivider"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+    <View
+        android:id="@+id/list_divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="?android:attr/listDivider"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
